--- a/changelog.txt
+++ b/changelog.txt
@@ -217,6 +217,12 @@ Anachrononaut changes
 		until repaired with an upgrade kit resized to fit you or
 		another monster.
 		Starts with a potion vaporizer and some potions.
+	New salamander ana race, demolition expert.
+		Grenade launcher and nades
+		Fireproof armor, some dragonhide
+		Flamethrower
+			Sprays burning oil splashes doing (6+multishot bonus)d6
+			Uses a charge system and uses 1 charge per use
 Added armorsmiths
 		Armorsmiths are meant to address the weird gap caused by
 		upgrade kits for strangely sized races
